--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,24 @@
 <html>
 	<head>
 		<title>Quadrangles</title>
-		<link rel="stylesheet" href="index.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Color+Emoji&display=swap" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="index.css" />
+		<script src="index.js"></script>
 	</head>
 	<body>
 		<header>
 			<section>
 				<img class="pad" src="quadrangle.svg" alt="Quadrangles" />
 				<h1 class="pad">quadrangles.ca</h1>
-				<h2 class="pad" id="tag">:meta</h2>
+				<textarea
+					id="topic"
+					rows="1"
+					cols="4"
+					maxlength="5"
+					placeholder=":">:root</textarea>
 			</section>
 			<section>
 				<a class="button pad" href="https://github.com/quadrangles-ca/">
