Further improvement on header display and posts

--- a/public/post.html
+++ b/public/post.html
@@ -9,20 +9,18 @@
 		<link rel="stylesheet" href="styles/base.css" />
 		<link rel="stylesheet" href="styles/post.css" />
 		<link rel="icon" href="images/quadrangle.svg" type="image/svg" />
-		<script src="scripts/index.js"></script>
+		<script src="scripts/post.js"></script>
 	</head>
 	<body>
 		<header>
 			<section>
 				<img class="pad" src="images/quadrangle.svg" alt="Quadrangles" />
 				<h1 class="pad">Quadrangles</h1>
-				<input id="topic" class="pad" type="text" maxlength="5" value=":root"></input>
-				<h3 id="message" class="pad"></h3>
+				<a class="button icon pad" href="index.html">&larr;</a>
 			</section>
 			<section>
 				<button class="pad icon">&plus;</button>
 			</section>
 		</header>
-		<div id="posts"></div>
 	</body>
 </html>
