--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Color+Emoji&display=swap" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="styles/base.css" />
+		<link rel="stylesheet" href="styles/root.css" />
+		<link rel="stylesheet" href="styles/header.css" />
+		<link rel="stylesheet" href="styles/menu.css" />
 		<link rel="stylesheet" href="styles/post.css" />
 		<link rel="icon" href="images/quadrangle.svg" type="image/svg" />
-		<script src="scripts/index.js"></script>
+		<script type="module" src="scripts/index.js"></script>
 	</head>
 	<body>
 		<header>
@@ -20,7 +22,7 @@
 				<h3 id="message" class="pad"></h3>
 			</section>
 			<section>
-				<button class="pad icon">&plus;</button>
+				<button id="create" class="pad icon">&plus;</button>
 			</section>
 		</header>
 		<div id="posts"></div>
