--- a/public/post.html
+++ b/public/post.html
@@ -6,10 +6,11 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Color+Emoji&display=swap" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="styles/base.css" />
+		<link rel="stylesheet" href="styles/root.css" />
+		<link rel="stylesheet" href="styles/header.css" />
+		<link rel="stylesheet" href="styles/menu.css" />
 		<link rel="stylesheet" href="styles/post.css" />
 		<link rel="icon" href="images/quadrangle.svg" type="image/svg" />
-		<script src="scripts/post.js"></script>
 	</head>
 	<body>
 		<header>
@@ -17,9 +18,6 @@
 				<img class="pad" src="images/quadrangle.svg" alt="Quadrangles" />
 				<h1 class="pad">Quadrangles</h1>
 				<a class="button icon pad" href="index.html">&larr;</a>
-			</section>
-			<section>
-				<button class="pad icon">&plus;</button>
 			</section>
 		</header>
 	</body>
