--- a/public/post.html
+++ b/public/post.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="styles/menu.css" />
 		<link rel="stylesheet" href="styles/post.css" />
 		<link rel="icon" href="images/quadrangle.svg" type="image/svg" />
+		<script type="module" src="scripts/post.js"></script>
 	</head>
 	<body>
 		<header>
@@ -20,5 +21,16 @@
 				<a class="button icon pad" href="index.html">&larr;</a>
 			</section>
 		</header>
+		<div id="root" class="cols">
+			<div class="col">
+				<section id="post-desc" class="align-right">
+					<h1>HELLO?????</h1>
+				</section>
+			</div>
+			<div class="col">
+				<input id="message" type="text" placeholder="Write a message" />
+				<section id="messages"></section>
+			</div>
+		</div>
 	</body>
 </html>
