Updated visual appearance

--- a/public/post.html
+++ b/public/post.html
@@ -7,28 +7,18 @@
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Color+Emoji&display=swap" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="styles/root.css" />
-		<link rel="stylesheet" href="styles/header.css" />
 		<link rel="stylesheet" href="styles/menu.css" />
 		<link rel="stylesheet" href="styles/post.css" />
 		<link rel="icon" href="images/quadrangle.svg" type="image/svg" />
 		<script type="module" src="scripts/post.js"></script>
 	</head>
 	<body>
-		<header>
-			<section>
-				<img class="pad" src="images/quadrangle.svg" alt="Quadrangles" />
-				<h1 class="pad">Quadrangles</h1>
-				<a class="button icon pad" href="index.html">&larr;</a>
-			</section>
-		</header>
 		<div id="root" class="cols">
 			<div class="col">
-				<section id="post-desc" class="align-right">
-					<h1>HELLO?????</h1>
-				</section>
+				<section id="post-desc" class="align-right"></section>
 			</div>
 			<div class="col">
-				<input id="message" type="text" placeholder="Write a message" />
+				<input id="message" type="text" />
 				<section id="messages"></section>
 			</div>
 		</div>
