--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="styles/root.css" />
 		<link rel="stylesheet" href="styles/menu.css" />
-		<link rel="stylesheet" href="styles/post.css" />
+		<link rel="stylesheet" href="styles/index.css" />
 		<link rel="icon" href="images/quadrangle.svg" type="image/svg" />
 		<script type="module" src="scripts/index.js"></script>
 	</head>
