--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
 		<script type="module" src="scripts/index.js"></script>
 	</head>
 	<body>
-		<div id="posts"></div>
+		<div id="root"></div>
 	</body>
 </html>
