--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="styles/root.css" />
 		<link rel="stylesheet" href="styles/menu.css" />
 		<link rel="stylesheet" href="styles/index.css" />
-		<link rel="icon" href="images/quadrangle.svg" type="image/svg" />
+		<link rel="icon" href="images/quadrangles.svg" type="image/svg" />
 		<script type="module" src="scripts/index.js"></script>
 	</head>
 	<body>
